--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <iframe src="https://clara-ads.github.io/lc-300x250/" width="300px" height="250px" style="border:none; text-align: center;" scrolling="no"></iframe>
 <br>
       <p style="color: #CDCDCD; font-size: 11px; padding-top: 8px;"> leaderboard </p>
-<iframe src="https://clara-ads.github.io/lc-728x90/" width="80% height="76px" style="border:none; text-align: center;" scrolling="no"></iframe>
+<iframe src="https://clara-ads.github.io/lc-728x90-b/" width="80% height="76px" style="border:none; text-align: center;" scrolling="no"></iframe>
 </div>
             
 </div> 
