--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
 <div class="col-lg-6 col-md-6 col-sm-12" text-right width="100%" height="480px" style="text-align: right;" nopadding>
     <p style="color: #CDCDCD; font-size: 11px;"> half page </p>
-<iframe src="https://clara-ads.github.io/LC-300x600/" width="90%" height="90%" style="border:none; text-align: center;" scrolling="no"></iframe>
+<iframe src="https://clara-ads.github.io/LC-300x600/" width="90%" height="90%" style="border:none; text-align: right;" scrolling="no"></iframe>
 </div>
         
 <div class="col-lg-6 col-md-6 col-sm-12" text-left width="618px" height="480px" style="text-align: left;" nopadding>
